--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.1",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "latest": "^0.2.0"
   }
 }
